# push-server

./: .dockerignore  .editorconfig  .env.example  .env.multi-tenant-example  .env.single-tenant-example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Contributors.md  Dockerfile  README.md  RELEASE.md  build.rs  cog.toml  docker-compose.multi-tenant.yml  docker-compose.storage.yml  docker-compose.yml  jest.setup.ts  jestconfig.integration.json  justfile  package.json  shell.nix  slim.Dockerfile  spec.md
.cargo/: config.toml
.github/: SECRETS.md  codeowners  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: auto_deploy.yml  cd.yml  ci.yml  ci_terraform.yml  intake.yml  publish_image.yml  release.yml  validate.yml
crates/is-variant-derive/: Cargo.toml  README.md
crates/is-variant-derive/src/: lib.rs
integration/: integration.test.ts
migrations/: 1664117746_create-clients.sql  1664117751_create-notifications.sql  1667510128_add-tenant-id.sql  1675269994_add-sandbox-to-enum.sql  1695024779_add-unique-device-tokens.sql  1695381202_alter_notifications_constraint.sql  1695631804_add-unique-device-tokens.sql  1699887339_notifications-primary-key-includes-client-id.sql  1699982551_add_always_raw_to_clients.sql  README.md  new.sh
spec/: auth.md  spec.md
sql/: 00-init.sql  01-create-clients.sql
src/: authentication.rs  blob.rs  config.rs  env.rs  env_test.rs  error.rs  lib.rs  macros.rs  main.rs  metrics.rs  request_id.rs  state.rs  store.rs  store_test.rs
src/analytics/: client_info.rs  message_info.rs  mod.rs
src/handlers/: create_tenant.rs  delete_apns.rs  delete_client.rs  delete_fcm.rs  delete_fcm_v1.rs  delete_tenant.rs  get_tenant.rs  health.rs  info.rs  metrics.rs  mod.rs  push_message.rs  rate_limit_test.rs  register_client.rs  single_tenant_wrappers.rs  update_apns.rs  update_fcm.rs  update_fcm_v1.rs
src/jwt_validation/: mod.rs
src/log/: mod.rs
src/metrics/: mod.rs
src/middleware/: logger.rs  mod.rs  rate_limit.rs  validate_signature.rs
src/providers/: apns.rs  apns_test.rs  fcm.rs  fcm_test.rs  fcm_v1.rs  mod.rs  noop.rs  noop_test.rs
src/relay/: mod.rs
src/stores/: client.rs  mod.rs  notification.rs  tenant.rs
src/supabase/: mod.rs
tenant_migrations/: 1667510351_create-tenants.sql  1667510358_create-default-tenant.sql  1674744346_deprecate-sandbox-flag.sql  1676394119_apns-team-tokens.sql  1676813285_fix-apns-team-tokens.sql  1691518766_add-suspension.sql  1713226293_fcm-v1.sql  README.md
terraform/: .terraform.lock.hcl  README.md  backend.tf  main.tf  provider.tf  variables.tf
terraform/analytics/: README.md  kms.tf  main.tf  outputs.tf  terraform.tf  variables.tf
terraform/database/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/ecs/: README.md  iam.tf  main.tf  outputs.tf  variables.tf
terraform/monitoring/: README.md  backend.tf  dashboard.jsonnet  main.tf  terraform.tf  variables.tf
terraform/monitoring/panels/: panels.libsonnet
terraform/monitoring/panels/app/: postgres_query_latency.libsonnet  postgres_query_rate.libsonnet
terraform/vars/: README.md  dev.tfvars  prod.tfvars  staging.tfvars
tests/: integration.rs  messages.rs  test.rs
tests/context/: mod.rs  server.rs  stores.rs
tests/env/: mod.rs
tests/functional/: mod.rs  push.rs  registration.rs  tenancy.rs
tests/functional/handlers/: mod.rs  push.rs  registration.rs  tenancy.rs
tests/functional/multitenant/: apns.rs  fcm.rs  fcm_v1.rs  mod.rs  tenancy.rs
tests/functional/singletenant/: mod.rs  push.rs  registration.rs
tests/functional/stores/: client.rs  mod.rs  notification.rs  tenant.rs
tests/providers/: apns.rs  fcm.rs  mod.rs  noop.rs
tests/store/: mod.rs  tenant.rs
tests/unit/: messages.rs  mod.rs  relay.rs
tests/unit/middleware/: mod.rs  validate_signature.rs
