[package]
name = "echo-server"
version = "0.31.1"
edition = "2021"
authors = [
    "Harry Bairstow <harry@walletconnect.com>"
]
build = "build.rs"
resolver = "2"

[features]
# Used to enable functional tests
functional_tests = []
# Multi-tenancy mode
multitenant = []
# Enable analytics
analytics = []
# Enable cloud app validations
cloud = []

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json", "multipart", "tokio"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "request-id", "propagate-header", "catch-panic"] }
hyper = "0.14"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono", "macros"] }

# Seralisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Build-time info
build-info = "0.0"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.11"
opentelemetry-otlp = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18"
atty = "0.2"

# Push
a2 = { git = "https://github.com/WalletConnect/a2", rev = "d0236c3", features = ["tracing", "openssl"] }
fcm = "0.9"

# Signature validation
ed25519-dalek = "2.0.0-rc.2"

# JWT Authentication
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "ced99e7"}
jsonwebtoken = "8.1"
data-encoding = "2.3"

# Analytics
aws-config = "0.55"
aws-sdk-s3 = "0.25"
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3", default-features = false, features = ["flate2"] }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "99a1cc3" }
gorgon = { git = "https://github.com/WalletConnect/gorgon.git", tag = "v0.5.1" }

# Misc
reqwest = "0.11"
async-trait = "0.1"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2", features = ["v4"] }
is-variant-derive = { path = "crates/is-variant-derive" }
once_cell = "1.15"
pnet_datalink = "0.31"
ipnet = "2.5"
cerberus = { git = "https://github.com/WalletConnect/cerberus.git", tag = "v0.5.0" }
async-recursion = "1.0.4"

[dev-dependencies]
serial_test = "1.0"
test-context = "0.1"
futures-util = "0.3"
random-string = "1.0"
rand = "0.8"
ed25519-dalek = { version = "2.0.0-rc.2", features = ["rand_core"] }

[build-dependencies]
build-info-build = "0.0"
